--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,9 @@ version = "0.1.0"
 authors = ["Ross Tollefson <ross@past9systems.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+libm = "0.2.1"
+
+[dev-dependencies]
 rand = "0.7.3"
 
-[profile.release]
-debug = true
