Make multi-crate

--- a/lib-fast-dtw/Cargo.toml
+++ b/lib-fast-dtw/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fast-approx-dtw"
+name = "fast-dtw"
 version = "0.1.0"
 authors = ["Ross Tollefson <ross@past9systems.com>"]
 edition = "2018"
